[package]
name = "prism-dtu-claroty"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "L4-adversarial behavioral clone of the Claroty xDome API"

[lib]
name = "prism_dtu_claroty"

[features]
dtu = []
fixture-gen = ["prism-dtu-common/fixture-gen", "dep:rand"]
tls = ["dep:axum-server", "prism-dtu-common/tls"]

[dependencies]
prism-dtu-common = { path = "../prism-dtu-common", version = "0.1.0", features = ["dtu"] }
rand = { version = "0.8", optional = true }
prism-core = { path = "../prism-core" }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
http = "1"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
jsonschema = "0.26"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
proptest = "1"
prism-core = { path = "../prism-core" }
prism-dtu-common = { path = "../prism-dtu-common", version = "0.1.0", features = ["fixture-gen"] }
prism-dtu-harness = { path = "../prism-dtu-harness", features = ["dtu"] }

[[test]]
name = "bc_3_4_claroty_generator"
path = "tests/bc_3_4_claroty_generator.rs"
required-features = ["fixture-gen"]

[[test]]
name = "fidelity_validator"
path = "tests/fidelity_validator.rs"
required-features = ["dtu"]

[[test]]
name = "ac_1_devices_list"
path = "tests/ac_1_devices_list.rs"
required-features = ["dtu"]

[[test]]
name = "ac_2_group_by"
path = "tests/ac_2_group_by.rs"
required-features = ["dtu"]

[[test]]
name = "ac_3_tag_add_persists"
path = "tests/ac_3_tag_add_persists.rs"
required-features = ["dtu"]

[[test]]
name = "ac_4_tag_remove"
path = "tests/ac_4_tag_remove.rs"
required-features = ["dtu"]

[[test]]
name = "ac_5_auth"
path = "tests/ac_5_auth.rs"
required-features = ["dtu"]

[[test]]
name = "ac_6_rate_limit"
path = "tests/ac_6_rate_limit.rs"
required-features = ["dtu"]

[[test]]
name = "ac_7_internal_error"
path = "tests/ac_7_internal_error.rs"
required-features = ["dtu"]

[[test]]
name = "ac_8_reset"
path = "tests/ac_8_reset.rs"
required-features = ["dtu"]

[[test]]
name = "edge_cases"
path = "tests/edge_cases.rs"
required-features = ["dtu"]

[[test]]
name = "td_wv0_04_configure_deny_unknown"
path = "tests/td_wv0_04_configure_deny_unknown.rs"
required-features = ["dtu"]

[[test]]
name = "td_wv0_07_configure_requires_admin_token"
path = "tests/td_wv0_07_configure_requires_admin_token.rs"
required-features = ["dtu"]

[[test]]
name = "multi_tenant"
path = "tests/multi_tenant.rs"
required-features = ["dtu"]

[[test]]
name = "harness_tests"
path = "tests/harness_tests.rs"
required-features = ["dtu"]

[lints]
workspace = true
