[package]
name = "prism-dtu-common"
version = "0.1.0"
edition = "2021"
description = "Shared infrastructure for Prism DTU behavioral clone crates"

[lib]
name = "prism_dtu_common"

# Per v1.4 spec fix: dtu feature declared per-crate, NOT at workspace level.
# Gate: #[cfg(any(test, feature = "dtu"))] ensures this crate never links into
# a production binary.
[features]
dtu = []

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
http = "1"
async-trait = "0.1"
tracing = "0.1"
tokio-util = "0.7"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bytes = "1"

[lints]
workspace = true
