[package]
name = "prism-dtu-common"
version = "0.1.0"
edition = "2021"
description = "Shared infrastructure for Prism DTU behavioral clone crates"
license = "MIT"
publish = false

[lib]
name = "prism_dtu_common"

# Per v1.4 spec fix: dtu feature declared per-crate, NOT at workspace level.
# Gate: #[cfg(any(test, feature = "dtu"))] ensures this crate never links into
# a production binary.
[features]
dtu = []
# fixture-gen activates all generator types (Archetype, GenOpts, seeded_rng, etc.)
# behind the AC-007/D-056 gate. The three optional deps below are ONLY linked
# when this feature is enabled — ensuring zero impact on release binaries.
fixture-gen = ["dep:chrono", "dep:thiserror", "dep:prism-core"]
tls = ["dep:axum-server"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
http = "1"
async-trait = "0.1"
tracing = "0.1"
tokio-util = "0.7"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bytes = "1"
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
# Optional deps — activated only by the `fixture-gen` feature (AC-007/D-056).
# These are NOT linked into any consumer that does not enable `fixture-gen`.
chrono = { version = "0.4", features = ["serde"], optional = true }
thiserror = { version = "1", optional = true }
prism-core = { path = "../prism-core", optional = true }

[dev-dependencies]
tempfile = "3"

# Integration tests — each requires the `dtu` feature so the cfg gate is lifted.
[[test]]
name = "ac_1_behavioral_clone_start"
path = "tests/ac_1_behavioral_clone_start.rs"
required-features = ["dtu"]

[[test]]
name = "ac_2_failure_layer_rate_limit"
path = "tests/ac_2_failure_layer_rate_limit.rs"
required-features = ["dtu"]

[[test]]
name = "ac_3_failure_layer_auth_reject"
path = "tests/ac_3_failure_layer_auth_reject.rs"
required-features = ["dtu"]

[[test]]
name = "ac_4_latency_layer_delay"
path = "tests/ac_4_latency_layer_delay.rs"
required-features = ["dtu"]

[[test]]
name = "ac_5_seeded_rng_determinism"
path = "tests/ac_5_seeded_rng_determinism.rs"
required-features = ["dtu"]

[[test]]
name = "ac_6_syslog_receiver"
path = "tests/ac_6_syslog_receiver.rs"
required-features = ["dtu"]

[[test]]
name = "ac_7_webhook_receiver"
path = "tests/ac_7_webhook_receiver.rs"
required-features = ["dtu"]

[[test]]
name = "ac_8_fidelity_validator"
path = "tests/ac_8_fidelity_validator.rs"
required-features = ["dtu"]

[[test]]
name = "ac_9_fixture_loader"
path = "tests/ac_9_fixture_loader.rs"
required-features = ["dtu"]

[[test]]
name = "td_wv0_08_syslog_loopback_gate"
path = "tests/td_wv0_08_syslog_loopback_gate.rs"
required-features = ["dtu"]

[[test]]
name = "bc_3_4_001_003_archetype_genopts"
path = "tests/bc_3_4_001_003_archetype_genopts.rs"
required-features = ["fixture-gen"]

[lints]
workspace = true
