[package]
name = "prism-dtu-nvd"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "L2-fidelity behavioral clone of the NVD/NIST CVE API 2.0"

[lib]
name = "prism_dtu_nvd"

# Per v1.4 spec fix: dtu feature declared per-crate, NOT at workspace level.
# Gate: #[cfg(any(test, feature = "dtu"))] ensures this crate never links into
# a production binary.
[features]
dtu = []
tls = ["dep:axum-server", "prism-dtu-common/tls"]

[dependencies]
prism-dtu-common = { path = "../prism-dtu-common", version = "0.1.0", features = ["dtu"] }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
async-trait = "0.1"
tracing = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
subtle = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[[test]]
name = "ac_1_cve_lookup_returns_fixture"
path = "tests/ac_1_cve_lookup_returns_fixture.rs"
required-features = ["dtu"]

[[test]]
name = "ac_2_request_count_cache_hit"
path = "tests/ac_2_request_count_cache_hit.rs"
required-features = ["dtu"]

[[test]]
name = "ac_3_unknown_cve_returns_404"
path = "tests/ac_3_unknown_cve_returns_404.rs"
required-features = ["dtu"]

[[test]]
name = "ac_4_unauthenticated_rate_limit"
path = "tests/ac_4_unauthenticated_rate_limit.rs"
required-features = ["dtu"]

[[test]]
name = "ac_5_authenticated_rate_limit"
path = "tests/ac_5_authenticated_rate_limit.rs"
required-features = ["dtu"]

[[test]]
name = "ac_6_auth_mode_reject"
path = "tests/ac_6_auth_mode_reject.rs"
required-features = ["dtu"]

[[test]]
name = "ac_7_bulk_fetch_pagination"
path = "tests/ac_7_bulk_fetch_pagination.rs"
required-features = ["dtu"]

[[test]]
name = "fidelity_validator"
path = "tests/fidelity_validator.rs"
required-features = ["dtu"]

[[test]]
name = "dtu_health_mount"
path = "tests/dtu_health_mount.rs"
required-features = ["dtu"]

[[test]]
name = "td_wv0_04_configure_deny_unknown"
path = "tests/td_wv0_04_configure_deny_unknown.rs"
required-features = ["dtu"]

[[test]]
name = "td_wv0_07_configure_requires_admin_token"
path = "tests/td_wv0_07_configure_requires_admin_token.rs"
required-features = ["dtu"]

[[test]]
name = "td_wv0_08_reset_requires_admin_token"
path = "tests/td_wv0_08_reset_requires_admin_token.rs"
required-features = ["dtu"]

[lints]
workspace = true
