[package]
name = "prism-dtu-pagerduty"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "L3-fidelity behavioral clone of the PagerDuty Events API v2"

[lib]
name = "prism_dtu_pagerduty"

# Per ADR-002: dtu feature declared per-crate, NOT at workspace level.
# Gate: #[cfg(any(test, feature = "dtu"))] ensures this crate never links into
# a production binary.
[features]
dtu = ["dep:prism-core"]
tls = ["dep:axum-server", "prism-dtu-common/tls"]

[dependencies]
prism-core = { path = "../prism-core", version = "0.2.0", optional = true }
prism-dtu-common = { path = "../prism-dtu-common", version = "0.1.0", features = ["dtu"] }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
async-trait = "0.1"
tracing = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
subtle = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
# S-3.4.05: harness migration — dev-dep only per ADR-011 §2.9
prism-dtu-harness = { path = "../prism-dtu-harness", version = "0.1.0", features = ["dtu"] }

[[test]]
name = "fidelity"
path = "tests/fidelity.rs"
required-features = ["dtu"]

[[test]]
name = "org_tagging"
path = "tests/org_tagging.rs"
required-features = ["dtu"]

[[test]]
name = "harness_tests"
path = "tests/harness_tests.rs"
required-features = ["dtu"]

[[test]]
name = "td_wv0_07_configure_requires_admin_token"
path = "tests/td_wv0_07_configure_requires_admin_token.rs"
required-features = ["dtu"]

[[test]]
name = "td_wv0_08_reset_requires_admin_token"
path = "tests/td_wv0_08_reset_requires_admin_token.rs"
required-features = ["dtu"]

[lints]
workspace = true
