[package]
name = "prism-dtu-slack"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "L2-fidelity behavioral clone of the Slack Incoming Webhook API"

[lib]
name = "prism_dtu_slack"

# Per ADR-002: dtu feature declared per-crate, NOT at workspace level.
# Gate: #[cfg(any(test, feature = "dtu"))] ensures this crate never links into
# a production binary.
[features]
dtu = ["dep:prism-core"]
tls = ["dep:axum-server", "prism-dtu-common/tls"]

[dependencies]
prism-dtu-common = { path = "../prism-dtu-common", version = "0.1.0", features = ["dtu"] }
prism-core = { path = "../prism-core", version = "0.1.0", optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
async-trait = "0.1"
tracing = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
http = "1"
prism-core = { path = "../prism-core", version = "0.1.0" }

[[test]]
name = "fidelity"
path = "tests/fidelity.rs"
required-features = ["dtu"]

[[test]]
name = "ac_tests"
path = "tests/ac_tests.rs"
required-features = ["dtu"]

[[test]]
name = "org_tagging"
path = "tests/org_tagging.rs"
required-features = ["dtu"]

[lints]
workspace = true
