[package]
name = "prism-dtu-threatintel"
version = "0.1.0"
edition = "2021"

[features]
dtu = []

[dependencies]
prism-dtu-common = { path = "../prism-dtu-common", features = ["dtu"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tower = "0.4"
http = "1"
anyhow = "1"
tracing = "0.1"

[lints]
workspace = true
