[package]
name = "prism-ocsf"
version = "0.1.0"
edition = "2021"
description = "OCSF normalization infrastructure — field mappers, alias resolution (S-1.05)"
license = "MIT"
publish = false

[lib]
name = "prism_ocsf"

[dependencies]
prism-core = { path = "../prism-core" }

# Protobuf runtime: serialisation and deserialisation of compiled OCSF schema messages.
prost = "0.13.5"

# DynamicMessage support: runtime reflection over protobuf descriptors without codegen.
prost-reflect = { version = "0.14.7", features = ["serde"] }

# JSON parsing of raw sensor records.
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

# Multi-format timestamp parsing for CyberintMapper (BC-2.02.004).
chrono = { version = "0.4", features = ["serde"] }

# Static alias tables — compile-time hash maps for alias resolution (BC-2.02.008).
phf = { version = "0.11", features = ["macros"] }

# Structured logging.
tracing = "0.1.44"

[dev-dependencies]
# VP-016 + VP-017: property-based testing.
proptest = "1.11.0"

[build-dependencies]
# ocsf-proto-gen: generates .proto files from the bundled OCSF JSON schema.
ocsf-proto-gen = { path = "../ocsf-proto-gen" }
# prost-build: compiles generated .proto files to a FileDescriptorSet binary.
prost-build = "0.13.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lints.clippy]
await_holding_lock = "deny"
# Test files use .unwrap()/.unwrap_err() by design — test-writer generated them.
unwrap_used = "allow"
